--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-loader": "^8.0.0",
     "idyll-components": "^3.3.0",
     "idyll-document": "^2.12.3",
     "react": "^16.4.2",
